5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1679_1100.log
== TEST (2019-04-27 17:48:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula=int(input('Valor da Cédula:  '))
if (cedula == 2):
    print('animal tartagura')
elif (cedula == 5):
    print('animal Garça')
elif (cedula == 10):
    print('animal é micoleoadourado')
elif (cedula == 50):
    print('animal é Onça')
elif (cedula == 50):
    print('animalgaroupa')
else:
    print('animal = erro')

-- OUTPUT:
animal = erro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:50:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula=int(input('Valor da Cédula: '))
if(cedula==2):
    print('tartagura')
elif(cedula==5):
    print('Garça')
elif(cedula == 10):
    print(Mico-Leoa-Dourado')
elif(cedula == 50):
    print('Onça')
elif(cedula == 50):
    print('animalgaroupa')
else:
    print('erro')

-- ERROR:
File "XXXX", line 10
    print(Mico-Leoa-Dourado')
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:50:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input('Valor da Cédula: '))

if(cedula==2):
   print('tartagura')
elif(cedula==5):
   print('Garça')
elif(cedula == 10):
   print(Mico-Leoa-Dourado')
elif(cedula == 50):
   print('Onça')
elif(cedula == 50):
   print('animal garoupa')
else:
   print('erro')

-- ERROR:
File "XXXX", line 12
    print(Mico-Leoa-Dourado')
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:52:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input('Valor da Cédula: '))

if(cedula==2):
   print(Aninal = 'tartagura')
elif(cedula==5):
   print(Aninal = 'Garça')
elif(cedula == 10):
   print(Aninal = Mico-Leoa-Dourado')
elif(cedula == 50):
   print('Onça')
elif(cedula == 50):
   print(Aninal = 'animal garoupa')
else:
   print('Aninal = invalido')

-- ERROR:
File "XXXX", line 12
    print(Aninal = Mico-Leoa-Dourado')
                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:54:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input('Valor da Cédula: '))

if(cedula==2):
   print("Animal = tartagura")
elif(cedula==5):
   print('Aninal: Garça')
elif(cedula == 10):
   print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
   print('Aninal: Onça')
elif(cedula == 50):
   print('Animal:garoupa')
else:
   print('Animal:invalido')

-- OUTPUT:
Animal:invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:55:29) 
-- CODE:

cedula=int(input('Valor da Cédula: '))
if(cedula==2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 50):
	print('Animal:garoupa')
else:
	print('Animal:invalido')

-- OUTPUT:
Animal:invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:56:58) 
-- CODE:

cedula=int(input('qual o valor da cedula: ')
if (cedula == 2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 50):
	print('Animal:garoupa')
else:
	print('Animal:invalido')

-- ERROR:
File "XXXX", line 3
    if (cedula == 2):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:57:05) 
-- CODE:

cedula=int(input('qual o valor da cedula: ')
if (cedula == 2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 50):
	print('Animal:garoupa')
else:
	print('Animal:invalido')

-- ERROR:
File "XXXX", line 3
    if (cedula == 2):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:57:16) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 50):
	print('Animal:garoupa')
else:
	print('Animal:invalido')

-- OUTPUT:
Animal:invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 17:57:23) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 50):
	print('Animal:garoupa')
else:
	print('Animal:invalido')

-- OUTPUT:
Animal:invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 17:57:30) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 50):
	print('Animal:garoupa')
else:
	print('Animal:invalido')

-- EXECUTION TIME:
0.128285
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 17:57:54) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 50):
	print('Animal:garoupa')
else:
	print('Animal: Invalido')

-- EXECUTION TIME:
0.158248
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 17:58:20) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal = tartagura")
elif(cedula==5):
	print('Aninal: Garça')
elif(cedula == 10):
	print("Aninal: Mico-Leoa-Dourado")
elif(cedula == 50):
	print('Aninal: Onça')
elif(cedula == 100):
	print('Animal:garoupa')
else:
	print('Animal: Invalido')

-- EXECUTION TIME:
0.18268
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 17:59:57) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:garoupa')
else:
	print('Animal: Invalido')

-- EXECUTION TIME:
0.167536
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:00:00) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Animal:garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:00:06) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:garoupa')
else:
	print('Animal: Invalido')

-- EXECUTION TIME:
0.156015
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:00:08) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Animal:garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:00:23) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:	Garoupa')
else:
	print('Animal: Invalido')

-- EXECUTION TIME:
0.192003
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:	Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:00:30) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:	Garoupa')
else:
	print('Animal:Invalido')

-- EXECUTION TIME:
0.132175
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:	Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:01:01) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:	Garoupa')
else:
	print('Invalido')

-- EXECUTION TIME:
0.14964
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:	Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:01:16) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Animal: Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Invalido')

-- EXECUTION TIME:
0.1109
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:01:31) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Animal: Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- EXECUTION TIME:
0.217278
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:01:37) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Animal: Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:01:41) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula == 10):
	print('Animal: Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:02:03) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal: Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- EXECUTION TIME:
0.184367
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:02:07) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula == 2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal: Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:02:47) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula==2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal:Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:02:53) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula==2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal:Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:03:13) 
-- CODE:

cedula=int(input('qual o valor da cedula: '))
if (cedula==2):
	print("Animal:Tartaruga")
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal:Mico-leão-dourado')
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:06:22) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	print('Animal:Tartaruga')
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print('Animal: Animal:Mico-leão-dourado')	
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- EXECUTION TIME:
0.186557
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:06:25) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	print('Animal:Tartaruga')
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print('Animal: Animal:Mico-leão-dourado')	
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:06:29) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	print('Animal:Tartaruga')
elif(cedula==5):
	print('Aninal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print('Animal: Animal:Mico-leão-dourado')	
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:07:14) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	print('Animal:Tartaruga')
elif(cedula==5):
	print('Animal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print('Animal:Mico-leão-dourado')	
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:08:05) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	print('Animal:Tartaruga')
elif(cedula==5):
	print('Animal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print("Animal:Mico-leão-dourado")	
elif(cedula == 50):
	print('Aninal:Onça-pintada')
elif(cedula == 100):
	print('Animal:Garoupa')
else:
	print('Animal:Invalido')

-- OUTPUT:
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:11:29) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal='tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	Animal='Invalido'
print(Animal)

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:13:44) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal=str('tartaruga')
elif(cedula==5):
	Animal=str('Garça')
elif(cedula==10):
	Animal=str('Arara')
elif(cedula==20):
	Animal=str('mico-leao-dourado)	
elif(cedula == 50):
	Animal=str('Onça-pintada')
elif(cedula == 100):
	Animal=str('Garoupa')
else:
	Animal=srt('Invalido')
print(Animal)

-- EXECUTION TIME:
0.114657
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 10
    Animal=str('mico-leao-dourado)	
                                  ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:13:47) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal=str('tartaruga')
elif(cedula==5):
	Animal=str('Garça')
elif(cedula==10):
	Animal=str('Arara')
elif(cedula==20):
	Animal=str('mico-leao-dourado)	
elif(cedula == 50):
	Animal=str('Onça-pintada')
elif(cedula == 100):
	Animal=str('Garoupa')
else:
	Animal=srt('Invalido')
print(Animal)

-- ERROR:
File "XXXX", line 10
    Animal=str('mico-leao-dourado)	
                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:14:12) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal='tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	Animal='Invalido'
print(Animal)

-- EXECUTION TIME:
0.168382
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:14:15) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal='tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	Animal='Invalido'
print(Animal)

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:14:47) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	'Animal:tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	Animal='Invalido'
print(Animal)

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:14:59) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	'Animal=tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	Animal='Invalido'
print(Animal)

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:15:11) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal='tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	Animal='Invalido'
print(Animal)

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:15:47) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal='tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	print(Animal='Invalido')


-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:16:15) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal='tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	print("Animal:Invalido")


-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:16:20) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if (cedula==2):
	Animal='tartaruga'
elif(cedula==5):
	Animal='Garça'
elif(cedula==10):
	Animal=='Arara'
elif(cedula==20):
	Animal='Mico-leão-dourado'	
elif(cedula == 50):
	Animal='Onça-pintada'
elif(cedula == 100):
	Animal='Garoupa'
else:
	print("Animal:Invalido")


-- EXECUTION TIME:
0.191529
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:

-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:18:23) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	'Animal:tartaruga'
elif(cedula==5):
	'Animal:Garça'
elif(cedula==10):
	'Animal:Arara'
elif(cedula==20):
	'Animal:Mico-leão-dourado'	
elif(cedula == 50):
	'Animal:Onça-pintada'
elif(cedula == 100):
	'Animal:Garoupa'
else:
	print('Animal:Invalido')


-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:18:31) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	'Animal:tartaruga'
elif(cedula==5):
	'Animal:Garça'
elif(cedula==10):
	'Animal:Arara'
elif(cedula==20):
	'Animal:Mico-leão-dourado'	
elif(cedula == 50):
	'Animal:Onça-pintada'
elif(cedula == 100):
	'Animal:Garoupa'
else:
	print('Animal:Invalido')


-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:18:38) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	'Animal:tartaruga'
elif(cedula==5):
	'Animal:Garça'
elif(cedula==10):
	'Animal:Arara'
elif(cedula==20):
	'Animal:Mico-leão-dourado'	
elif(cedula == 50):
	'Animal:Onça-pintada'
elif(cedula == 100):
	'Animal:Garoupa'
else:
	print('Animal:Invalido')


-- EXECUTION TIME:
0.135624
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:

-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:19:45) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal:tartaruga')
elif(cedula==5):
	print('Animal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print('Animal:Mico-leão-dourado')	
elif(cedula == 50):
	print('Animal:Onça-pintada')
elif(cedula == 100):
	'Animal:Garoupa'
else:
	print('Animal:Invalido')


-- EXECUTION TIME:
0.285201
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:

-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:19:55) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal:tartaruga')
elif(cedula==5):
	print('Animal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print('Animal:Mico-leão-dourado')	
elif(cedula == 50):
	print('Animal:Onça-pintada')
elif(cedula == 100):
	'Animal:Garoupa'
else:
	print('Animal:Invalido')


-- EXECUTION TIME:
0.127986
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:

-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:19:57) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal:tartaruga')
elif(cedula==5):
	print('Animal:Garça')
elif(cedula==10):
	print('Animal:Arara')
elif(cedula==20):
	print('Animal:Mico-leão-dourado')	
elif(cedula == 50):
	print('Animal:Onça-pintada')
elif(cedula == 100):
	'Animal:Garoupa'
else:
	print('Animal:Invalido')


-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:21:23) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal:tartaruga')
	elif(cedula==5):
		print('Animal:Garça')
	elif(cedula==10):
		print('Animal:Arara')
	elif(cedula==20):
		print('Animal:Mico-leão-dourado')	
	elif(cedula == 50):
		print('Animal:Onça-pintada')
	elif(cedula == 100):
		print('Animal:Garoupa')
else:
	print('Animal:Invalido')


-- EXECUTION TIME:
0.216611
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 5
    elif(cedula==5):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:21:26) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal:tartaruga')
	elif(cedula==5):
		print('Animal:Garça')
	elif(cedula==10):
		print('Animal:Arara')
	elif(cedula==20):
		print('Animal:Mico-leão-dourado')	
	elif(cedula == 50):
		print('Animal:Onça-pintada')
	elif(cedula == 100):
		print('Animal:Garoupa')
else:
	print('Animal:Invalido')


-- ERROR:
File "XXXX", line 5
    elif(cedula==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:22:40) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal:Tartaruga')
	elif(cedula==5):
		print('Animal:Garça')
	elif(cedula==10):
		print('Animal:Arara')
	elif(cedula==20):
		print('Animal:Mico-leão-dourado')	
	elif(cedula == 50):
		print('Animal:Onça-pintada')
	elif(cedula == 100):
		print('Animal:Garoupa')
else:
	print('Animal:Invalido')


-- EXECUTION TIME:
0.203761
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 5
    elif(cedula==5):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:23:59) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal:Tartaruga')
	elif(cedula==5):
		print('Animal:Garça')
	elif(cedula==10):
		print('Animal:Arara')
	elif(cedula==20):
		print('Animal:Mico-leão-dourado')	
	elif(cedula == 50):
		print('Animal:Onça-pintada')
	elif(cedula == 100):
		print('Animal:Garoupa')
else:
	print('Animal: Invalido')


-- ERROR:
File "XXXX", line 5
    elif(cedula==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:24:50) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal: Tartaruga')
	elif(cedula==5):
		print('Animal: Garça')
	elif(cedula==10):
		print('Animal: Arara')
	elif(cedula==20):
		print('Animal: Mico-leão-dourado')	
	elif(cedula == 50):
		print('Animal: Onça-pintada')
	elif(cedula == 100):
		print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- ERROR:
File "XXXX", line 5
    elif(cedula==5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:25:52) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal: Tartaruga')
elif(cedula==5):
	print('Animal: Garça')
elif(cedula==10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leão-dourado')	
elif(cedula == 50):
	print('Animal: Onça-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:26:02) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal: Tartaruga')
elif(cedula==5):
	print('Animal: Garça')
elif(cedula==10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leão-dourado')	
elif(cedula == 50):
	print('Animal: Onça-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- EXECUTION TIME:
0.14985
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:26:37) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
if(cedula==2):
	print('Animal: Tartaruga')
elif(cedula==5):
	print('Animal: Garça')
elif(cedula==10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- EXECUTION TIME:
0.185384
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:27:15) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garça')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:27:22) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garça')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- EXECUTION TIME:
0.149189
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:27:30) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garça')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:27:35) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garça')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:27:40) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garça')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:27:43) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garça')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:27:53) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:27:57) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- EXECUTION TIME:
0.136974
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:28:01) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:28:06) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:28:17) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:28:22) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:28:43) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onça-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:29:00) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:29:16) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- EXECUTION TIME:
0.150939
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 18:29:18) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- EXECUTION TIME:
0.12312
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:29:21) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:29:26) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:29:29) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:29:33) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:29:36) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:30:22) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print(Entrada=cedula)
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:30:46) 
-- CODE:

entrada=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print(Entrada)
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (cedula == 2):
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:31:15) 
-- CODE:

entrada=int(input('Qual o valor da cedula: '))

if (entrada == 2):
	print(Entrada=entrada)
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(cedula == 5):
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:31:46) 
-- CODE:

entrada=int(input('Qual o valor da cedula: '))

if (entrada == 2):
	print("Entrada=2")
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(cedula == 5):
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:32:45) 
-- CODE:

entrada=int(input('Qual o valor da cedula: '))

if (entrada == 2):
	print('Entrada:, entrada')
	print('Animal: Tartaruga')
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(cedula == 5):
NameError: name 'cedula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:36:32) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga')
	print("Entrada = cedula")
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 18:36:46) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))

if (cedula == 2):
	print('Animal: Tartaruga') and	print("Entrada = cedula")
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:51:44) 
-- CODE:

cedula=int(input('Qual o valor da cedula: '))
print("Entradas: ", 2, ",", 5, ",", 10, ",",20, ",", 50, ",", 100 )
if (cedula == 2):
	print('Animal: Tartaruga')
	print("Entrada=")
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Entradas:  2 , 5 , 10 , 20 , 50 , 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:00:40) 
-- CODE:
cedula=int(input('Qual o valor da cedula: '))
print("Entradas: ", 2, ",", 5, ",", 10, ",",20, ",", 50, ",", 100 )
if (cedula == 2):
	print('Animal: Tartaruga')
	print("Entrada=")
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Entradas:  2 , 5 , 10 , 20 , 50 , 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:41:05) 
-- CODE:
cedula=int(input('Qual o valor da cedula: '))
print("Entrada: , cedula ")
if (cedula == 2):
	print('Animal: Tartaruga')
	print("Entrada=")
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Entrada: , cedula 
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:14:04) 
-- CODE:
cedula=int(input('Qual o valor da cedula: '))
print("Entrada:", cedula)
if (cedula == 2):
	print('Animal: Tartaruga')
	print("Entrada=")
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:14:14) 
-- CODE:
cedula=int(input('Qual o valor da cedula: '))
print("Entrada:", cedula)
if (cedula == 2):
	print('Animal: Tartaruga')
	print("Entrada=")
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:15:10) 
-- CODE:
cedula=int(input('Qual o valor da cedula: '))
print("Entrada:", cedula)
if (cedula == 2):
	print('Animal: Tartaruga')
	
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:15:33) 
-- CODE:
cedula=int(input('Qual o valor da cedula: '))
print("Entrada:", cedula)
if (cedula == 2):
	print('Animal: Tartaruga')
	
elif(cedula == 5):
	print('Animal: Garca')
elif(cedula == 10):
	print('Animal: Arara')
elif(cedula==20):
	print('Animal: Mico-leao-dourado')	
elif(cedula == 50):
	print('Animal: Onca-pintada')
elif(cedula == 100):
	print('Animal: Garoupa')
else:
	print('Animal: Invalido')

-- EXECUTION TIME:
0.27202
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
